--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,4 +1,4 @@
-<div id="tournament-info">
+<div id="tournament-info" data-id="<%= @tournament.id %>"</div>>
   <h1><strong>Name: </strong><%= @tournament.user.username %></h3>
   <h4><strong>Administrator: </strong><%= @tournament.user.username %></h4>
   <h4><strong>Format: </strong><%= @tournament.tournament_type.name %></h4>
