--- a/app/views/tournaments/update_tournament_brackets.js.erb
+++ b/app/views/tournaments/update_tournament_brackets.js.erb
@@ -8,22 +8,25 @@ $("#refresh").attr("disabled", true);
 
     $(match).attr("data-match-id","<%= m.id %>")
 
-    $(match).find(".team-name").first().html("<%= m.participant_a.team.name %>");
-    $(match).find(".team-name").last().html("<%= m.participant_b.team.name %>");
+    $(match).find(".team-name").first().html("<%= m.participant_a.present? ? m.participant_a.team.name : 'TBD' %>");
+    $(match).find(".team-name").last().html("<%= m.participant_b.present?  ? m.participant_b.team.name : 'TBD' %>");
 
     if( $(match).find('button.match-score-button').length ){
         $(match).find('button.match-score-button').remove();
     }
 
-    if(<%= m.participant_a_score > m.participant_b_score %>){
-        $(match).find(".team-score").first().html("<%= m.participant_a_score %>").parent().addClass("winner");
-        $(match).find(".team-score").last().html("<%= m.participant_b_score %>").parent().addClass("loser");
-    } else if (<%= m.participant_a_score < m.participant_b_score %>){
-        $(match).find(".team-score").first().html("<%= m.participant_a_score %>").parent().addClass("loser");
-        $(match).find(".team-score").last().html("<%= m.participant_b_score %>").parent().addClass("winner");
-    } else {
-        $(match).append('<button type="button" class="btn btn-default match-score-button">Insert score</button>');
+    if(<%= m.participant_a.present? && m.participant_b.present? %>){
+        if(<%= m.participant_a_score > m.participant_b_score %>){
+            $(match).find(".team-score").first().html("<%= m.participant_a_score %>").parent().addClass("winner");
+            $(match).find(".team-score").last().html("<%= m.participant_b_score %>").parent().addClass("loser");
+        } else if (<%= m.participant_a_score < m.participant_b_score %>){
+            $(match).find(".team-score").first().html("<%= m.participant_a_score %>").parent().addClass("loser");
+            $(match).find(".team-score").last().html("<%= m.participant_b_score %>").parent().addClass("winner");
+        } else {
+            $(match).append('<button type="button" class="btn btn-default match-score-button">Insert score</button>');
+        } 
     }
+    
 <% end %>
 
 $("#loading").remove();
