--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,5 +1,5 @@
 <div id="tournament-info" data-id="<%= @tournament.id %>">
-  <h1><strong>Name: </strong><%= @tournament.user.username %></h1>
+  <h1><strong>Name: </strong><%= @tournament.name %></h1>
   <h4><strong>Administrator: </strong><%= @tournament.user.username %></h4>
   <h4><strong>Format: </strong><%= @tournament.tournament_type.name %></h4>
   <h4>
