--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -49,7 +49,8 @@
 <br>
 <%= button_to 'Refresh brackets', update_tournament_brackets_path(@tournament), method: :get, id: 'refresh',class: 'btn btn-primary', remote: true %>
 <br>
-<%= button_to 'Remove all matches (debug button just for development purposes)', remove_all_matches_path(@tournament), method: :post, class: 'btn btn-primary' %>
+<p style="font-style: italic">(debug button just for development purposes)</p>
+<%= button_to 'Remove all matches', remove_all_matches_path(@tournament), method: :post, class: 'btn btn-primary' %>
 
 <% if @tournament.user == current_user %>
  <br>
