Added option for admins to remove participants from tournaments

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -26,7 +26,10 @@
                 <% if current_user.present? && participant.team == current_user.team %>
                   <strong><%= participant.team.name %></strong>
                 <% else %>
-                  <%= participant.team.name %>
+                  <%= participant.team.name %> 
+                  <% if @tournament.user == current_user %>
+                    <%= link_to 'Remove', [@tournament,participant], method: :delete, data: { confirm: 'Are you sure?' } %>
+                  <% end %>
                 <% end %>
               </li>
             <% end %>
