--- a/app/assets/stylesheets/tournaments.scss
+++ b/app/assets/stylesheets/tournaments.scss
@@ -108,7 +108,6 @@ $line-color: #000000;
     }
 }
 
-
 .top-horizontal{
     position:absolute;
     background-color: $line-color;
@@ -174,4 +173,8 @@ $line-color: #000000;
 
 .loser{
     background-color: #f88a8a;
+}
+
+.team-hover{
+    background-color: #e8f88a;
 }
