--- a/app/views/tournaments/update_tournament_brackets.js.erb
+++ b/app/views/tournaments/update_tournament_brackets.js.erb
@@ -1,4 +1,4 @@
-$(".brackets").parent().append('<div id="loading"></div>');
+$(".bracket-container").append('<div id="loading"></div>');
 $(".brackets").addClass("low-opacity");
 $("#refresh").val("Refreshing...");
 $("#refresh").attr("disabled", true);
