--- a/app/assets/stylesheets/tournaments.scss
+++ b/app/assets/stylesheets/tournaments.scss
@@ -72,16 +72,51 @@ $line-color: #000000;
     }
 
     &:not(:first-child){
-        margin-left: 80px;
+        margin-left: 40px;
     }
 }
+
 .lines{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
+
 .line-set{
     position:relative;
+}
+
+.round3{
+    justify-content: flex-end;
+    .line-set:last-child{
+        margin-top: 100px;
+        margin-bottom: 97px;
+    }
+}
+
+.round4{
+    justify-content: flex-end;
+    .match:last-child{
+        margin-top: 200px;
+        margin-bottom: 147px;
+    }
+    .line-set{
+        margin-bottom: 145px;
+    }
+}
+
+.round5{
+    .match{
+        margin-bottom: 95px;
+    }
+    .line-set{
+        margin-bottom: 190px;
+    }
+}
+
+.round6 .match{
+    margin-right: 50px;
+    margin-bottom: 190px;
 }
 
 .team{
@@ -108,10 +143,20 @@ $line-color: #000000;
     }
 }
 
+.empty {
+    color:white;
+    .team, .team-score{
+        border-color: white !important; 
+    }  
+    span{
+        background-color: white;
+    }  
+}
+
 .top-horizontal{
     position:absolute;
     background-color: $line-color;
-    width: 40px;
+    width: 20px;
     height: 2px;
     top: 31.5px;
 }
@@ -119,7 +164,7 @@ $line-color: #000000;
 .bottom-horizontal{
     position:absolute;
     background-color: $line-color;
-    width: 40px;
+    width: 20px;
     height: 2px;
     bottom: 31.5px;
 }
@@ -131,16 +176,16 @@ $line-color: #000000;
     height: auto;
     top: 31.5px;
     bottom: 31.5px;
-    left: 40px;
+    left: 20px;
 }
 
 .center-horizontal{
     position:absolute;
     background-color: $line-color;
-    width: 40px;
+    width: 20px;
     height: 2px;
     top: 50%;
-    left: 40px;
+    left: 20px;
     transform: translateY(-50%);
 }
 
