--- a/app/views/tournaments/bracket-partials/_match.html.erb
+++ b/app/views/tournaments/bracket-partials/_match.html.erb
@@ -1,4 +1,4 @@
-<div class="match" data-stage="<%= stage %>">
+<div class="match <%= empty ? 'empty':'' %>" data-stage="<%=empty ? '' : stage %>">
     <div class="team">
         <div class="team-name">
             TBD
