--- a/app/views/tournaments/bracket-partials/_single-elimination.html.erb
+++ b/app/views/tournaments/bracket-partials/_single-elimination.html.erb
@@ -1,7 +1,7 @@
 <div class="brackets">
   <div class="round">
     <% for i in 0..7%>
-    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, tournament: @tournament} %>
+    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
       <% end %>
   </div>
   <div class="lines">
@@ -11,23 +11,23 @@
   </div>
   <div class="round">
     <% for i in 8..11%>
-    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, tournament: @tournament} %>
+    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
       <% end %>
   </div>
   <div class="lines">
     <% for i in 0..1%>
       <%= render partial:'tournaments/bracket-partials/lines', locals: {height: 'height:195px'} %>
-        <% end %>
+    <% end %>
   </div>
   <div class="round">
     <% for i in 12..13%>
-    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, tournament: @tournament} %>
-      <% end %>
+      <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+    <% end %>
   </div>
   <div class="lines">
     <%= render partial:'tournaments/bracket-partials/lines', locals: {height: 'height:325px'} %>
   </div>
   <div class="round">
-      <%= render partial:'tournaments/bracket-partials/match', locals: {stage: 14, tournament: @tournament} %>
+    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: 14, empty: false} %>
   </div>
 </div>
