--- a/app/views/tournaments/bracket-partials/_swiss.html.erb
+++ b/app/views/tournaments/bracket-partials/_swiss.html.erb
@@ -1,1 +1,71 @@
-<h1>work in progress..</h1>
+<div class="swiss">
+    <h2>Round 1</h2>
+    <div class="round">
+        <div class="zero-zero">
+            <h3>0-0</h3>
+            <% for i in 0..7%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+    </div>
+    <h2>Round 2</h2>
+    <div class="round">
+        <div class="zero-zero">
+            <h3>1-0</h3>
+            <% for i in 8..11%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+        <div class="zero-zero">
+            <h3>0-1</h3>
+            <% for i in 12..15%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+    </div>
+    <h2>Round 3</h2>
+    <div class="round">
+        <div class="zero-zero">
+            <h3>2-0</h3>
+            <% for i in 16..17%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+        <div class="zero-zero">
+            <h3>1-1</h3>
+            <% for i in 18..21%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+        <div class="zero-zero">
+            <h3>0-2</h3>
+            <% for i in 22..23%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+    </div>
+    <h2>Round 4</h2>
+    <div class="round">
+        <div class="zero-zero">
+            <h3>2-1</h3>
+            <% for i in 24..26%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+        <div class="zero-zero">
+            <h3>1-2</h3>
+            <% for i in 27..29%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+    </div>
+    <h2>Round 5</h2>
+    <div class="round">
+        <div class="zero-zero">
+            <h3>2-2</h3>
+            <% for i in 30..32%>
+                <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, empty: false} %>
+                    <% end %>
+        </div>
+    </div>
+</div>
