--- a/app/views/tournaments/_form.html.erb
+++ b/app/views/tournaments/_form.html.erb
@@ -1,37 +1,44 @@
 <%= form_for(tournament) do |f| %>
   <% if tournament.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(tournament.errors.count, "error") %> prohibited this tournament from being saved:</h2>
+      <h2>
+        <%= pluralize(tournament.errors.count, "error") %> prohibited this tournament from being saved:</h2>
 
       <ul>
-      <% tournament.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% tournament.errors.full_messages.each do |message| %>
+          <li>
+            <%= message %>
+          </li>
+          <% end %>
       </ul>
     </div>
-  <% end %>
+    <% end %>
+      <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+        <div class="panel panel-default">
+          <div class="form-group">
+            <%= f.label :name %>
+              <%= f.text_field :name, class: 'form-control' %>
+          </div>
 
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
+          <div class="form-group">
+            <%= f.label :tournament_type_id %>
+              <%= f.collection_select(:tournament_type_id, TournamentType.all, :id, :name, {}, {:class => 'form-control'}) %>
+          </div>
 
-  <div class="field">
-    <%= f.label :tournament_type_id %>
-    <%= f.collection_select(:tournament_type_id, TournamentType.all, :id, :name) %>
-  </div>
+          <div class="form-group">
+            <%= f.label :max_participants %>
+              <%= f.select(:max_participants, @max_participants_options, {}, {:class => 'form-control'}) %>
+          </div>
 
-  <div class="field">
-      <%= f.label :max_participants %>
-      <%= f.select(:max_participants, @max_participants_options) %>
-  </div>
+          <div class="form-group">
+            <%= f.label :start_date %>
+              <%= f.datetime_select :start_date %>
+          </div>
 
-  <div class="field">
-    <%= f.label :start_date %>
-    <%= f.datetime_select :start_date %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+          <div class="actions">
+            <%= f.submit "Log in", class: 'btn btn-primary' %>
+          </div>
+          <% end %>
+          <%= link_to 'Back', tournaments_path %>
+        </div>
+      </div>
