--- a/app/assets/stylesheets/tournaments.scss
+++ b/app/assets/stylesheets/tournaments.scss
@@ -230,7 +230,7 @@ $line-color: #000000;
 
 .swiss{
 
-    h2{
+    > h2{
         clear: both;
     }
 
@@ -243,6 +243,11 @@ $line-color: #000000;
             padding: 0px 20px 20px;
             margin: auto;
             background-color: #cccccc;
+
+            h2{
+                text-align: center;
+                letter-spacing: 2px;
+            }
         }
         .group:not(:last-child){
             margin-right: 30px;
