Added margin below groups in swiss system brackets

--- a/app/assets/stylesheets/tournaments.scss
+++ b/app/assets/stylesheets/tournaments.scss
@@ -241,7 +241,7 @@ $line-color: #000000;
             border-radius: 25px;
             border: 1px solid;
             padding: 0px 20px 20px;
-            margin: auto;
+            margin: auto auto 20px;
             background-color: #cccccc;
 
             h2{
