--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -2,7 +2,7 @@
 <div class="col-md-5">
     <div class="panel panel-default">
         <h1>Create new team</h1>
-        <%= render 'form', team: @team %>
+        <%= render 'create', team: @team %>
     </div>
 </div>
 <div class="col-md-2" id="or">
@@ -12,19 +12,6 @@
 <div class="col-md-5">
         <div class="panel panel-default">
             <h1>Join existing team</h1>
-            <%= form_tag("/join_existing_team", method: "post") do %>
-                <div class="form-group">
-                    <%= label_tag :name %>
-                    <%= text_field_tag :name, nil, id: nil, class: 'form-control' %>
-                </div>
-                
-                <div class="form-group">
-                    <%= label_tag :password %>
-                    <%= password_field_tag :password, nil, id: nil, class: 'form-control' %>
-                </div>
-                <div class="actions">
-                    <%= submit_tag 'Join team', class: 'btn btn-primary' %>
-                </div>
-                <% end %>
+            <%= render 'join', team: @team %>
         </div>
     </div>
