--- a/app/views/teams/_join.html.erb
+++ b/app/views/teams/_join.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @team, url: { action: "join_existing_team", method: "post"} do |f| %>
+<%= form_for @team, url: { action: "join_existing_team", method: "post"}, html: {id: "join_existing_team"} do |f| %>
 
 <div class="form-group">
     <%= label_tag :name %>
